Menambahkan API user course dan dokumentasinya
