# BE/routes/index.js
@@ -13,7 +13,7 @@ const Chapter = require("./chapterRouter");
 
 router.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 router.use("/api/v1/auth", Auth);
-router.use("/api/v1/my-details", User);
+router.use("/api/v1/user", User);
 router.use("/api/v1/courses", Course);
 router.use("/api/v1/chapters", Chapter);
 router.use("/api/v1/modules", Module);
